feat:Configuração de permissões no app.json Geração de build Android (APK) via EAS Build  Ajustes de estilo com tema leve, cores institucionais da Leve Saúde

--- a/app.json
+++ b/app.json
@@ -20,13 +20,20 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.carolyne04.testmobilelevesaude"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "9f12a174-6f5a-430c-8703-2cc1ffbb4b23"
+      }
+    }
   }
 }
