feat: atualização de input e ajustes de estilo nas telas

--- a/eas.json
+++ b/eas.json
@@ -10,9 +10,8 @@
       "android": {
         "buildType": "apk"
       },
-      "ios": {
-        "simulator": true
-      }
+       "autoIncrement": true
+     
     },
     "preview": {
       "distribution": "internal"
