--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native": "^7.1.15",
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.20",
     "expo-router": "~5.1.4",
