--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,11 @@
   "build": {
     "preview": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_URL": "your-api-url-here"
       }
     },
     "preview2": {
@@ -20,6 +24,13 @@
     "preview4": {
       "distribution": "internal"
     },
+    "production": {
+      "android": {
+        "buildType": "aab"
+      }
+    }
+  },
+  "submit": {
     "production": {}
   }
 }
