--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,14 @@
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease"
+      },
+      "env": {
+        "FIREBASE_API_KEY": "from-env",
+        "FIREBASE_AUTH_DOMAIN": "from-env",
+        "FIREBASE_PROJECT_ID": "from-env",
+        "FIREBASE_STORAGE_BUCKET": "from-env",
+        "FIREBASE_MESSAGING_SENDER_ID": "from-env",
+        "FIREBASE_APP_ID": "from-env"
       }
     }
   }
