--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.20",
+    "expo-build-properties": "~0.14.8",
+    "expo-constants": "~17.1.7",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
@@ -23,9 +25,7 @@
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-toast-message": "^2.3.3",
-    "expo-constants": "~17.1.7",
-    "expo-build-properties": "~0.14.8"
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
